--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,9 +47,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.BootsFaces-OSP-1.2.0-dist.jar}:\
-    ${libs.primefaces.classpath}:\
     ${libs.javaee-api-7.0.classpath}:\
-    ${file.reference.omnifaces-1.7.jar}
+    ${file.reference.omnifaces-1.7.jar}:\
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -76,7 +76,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
